--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,26 @@
 .header {
     background-color: #34a5da;
-    
+    height: 6rem;
+    width: 100vw;
+}
+
+.home_link {
+    display: flex;
+    padding-top: 2rem;
+    padding-left: 3rem;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: purple;
 }
